--- a/GOODS INFORMATION MANAGEMENT SYSTEM/GOODS INFORMATION MANAGEMENT SYSTEM/GOODS INFORMATION MANAGEMENT SYSTEM.csproj
+++ b/GOODS INFORMATION MANAGEMENT SYSTEM/GOODS INFORMATION MANAGEMENT SYSTEM/GOODS INFORMATION MANAGEMENT SYSTEM.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,6 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBSDataSetACcount.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBSDataSetACcount.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +81,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="DBSDataSetACcount.xsc">
+      <DependentUpon>DBSDataSetACcount.xsd</DependentUpon>
+    </None>
+    <None Include="DBSDataSetACcount.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DBSDataSetACcount.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DBSDataSetACcount.xss">
+      <DependentUpon>DBSDataSetACcount.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
